# LinearRegression

./: CMakeLists.txt
include/: linear.hpp  plot.hpp
src/: linear.cpp
